--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "c3": "^0.4.18",
+    "compression": "^1.7.1",
     "d3": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.1"
