--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "webpack",
+    "build:watch": "webpack --watch",
+    "build:prod": "webpack -p",
+    "build:stats": "webpack -p --profile --json > stats.json && webpack-bundle-analyzer stats.json",
+    "prebuild": "npm run clean",
+    "prebuild:watch": "npm run clean",
+    "prebuild:prod": "npm run clean",
+    "clean": "rm -rf ./src/public/dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,8 +20,17 @@
   "dependencies": {
     "c3": "^0.4.18",
     "compression": "^1.7.1",
-    "d3": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.1"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
+    "ejs-compiled-loader": "^1.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0"
   }
 }
