--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "ejs-compiled-loader": "^1.1.0",
