--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "c3": "^0.4.18",
     "compression": "^1.7.1",
     "ejs": "^2.5.7",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "multi-loader": "^0.1.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "ejs-compiled-loader": "^1.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
+    "webp-loader": "^0.2.1",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0"
   }
