--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "build": "webpack",
     "build:watch": "webpack --watch",
-    "build:prod": "webpack -p",
+    "build:prod": "NODE_ENV=production webpack -p",
     "build:stats": "webpack -p --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "prebuild": "npm run clean",
     "prebuild:watch": "npm run clean",
