--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "c3": "^0.4.18",
     "compression": "^1.7.1",
     "ejs": "^2.5.7",
-    "express": "^4.16.1",
-    "multi-loader": "^0.1.0"
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
